# ansible-cluster

./: README.md  ansible.cfg  hosts  playbook.yml  secrets.yml
cuda/: CMakeLists.txt  vector_add.cu
mpi/: Makefile  hello_mpi.c
